// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components | app-header | index snapshot doit correspondre quand l'user est connecté en mode desktop 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeaderComponent-toolbarRoot-8",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeaderComponent-titleRoot-7",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeaderComponent-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
        <span
          className="AppHeaderComponent-bolderMobileTitle-1"
        >
          POP
        </span>
      </span>
    </WithStyles(Typography)>
    <div
      className="AppHeaderComponent-loginButtonMobilePlaceholder-5"
    />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user est connecté en mode mobile 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeaderComponent-toolbarRoot-8",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeaderComponent-titleRoot-7",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeaderComponent-lighterMobileTitle-3"
        >
          LEXIMPACT 
        </span>
        <span
          className="AppHeaderComponent-bolderMobileTitle-1"
        >
          POP
        </span>
      </span>
    </WithStyles(Typography)>
    <div
      className="AppHeaderComponent-loginButtonMobilePlaceholder-5"
    />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user n'est pas connecté en mode desktop 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeaderComponent-toolbarRoot-8",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeaderComponent-titleRoot-7",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeaderComponent-bolderTitle-2"
        >
          OPEN 
        </span>
        <span
          className="AppHeaderComponent-lighterTitle-4"
        >
          LEXIMPACT
        </span>
      </span>
    </WithStyles(Typography)>
    <WithStyles(LoginButton) />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`components | app-header | index snapshot doit correspondre quand l'user n'est pas connecté en mode mobile 1`] = `
<WithStyles(AppBar)
  position="static"
>
  <WithStyles(Toolbar)
    classes={
      Object {
        "root": "AppHeaderComponent-toolbarRoot-8",
      }
    }
  >
    <WithStyles(HeaderMenuButton) />
    <WithStyles(Typography)
      classes={
        Object {
          "root": "AppHeaderComponent-titleRoot-7",
        }
      }
      component="div"
    >
      <span>
        <span
          className="AppHeaderComponent-bolderMobileTitle-1"
        >
          OPEN 
        </span>
        <span
          className="AppHeaderComponent-lighterMobileTitle-3"
        >
          LEXIMPACT
        </span>
      </span>
    </WithStyles(Typography)>
    <WithStyles(LoginButtonMobile) />
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;
